# docker-django

./: .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/app/: settings.py
