[tool.poetry]
name = "docker_django"
version = "0.1.0"
description = ""
authors = ["differentmonster <differentcodemonster@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"
psycopg2 = "^2.8.5"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
